fix: fix wrong color-function notation

--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -2,28 +2,28 @@
   color-scheme: dark;
 
   /* Framework color */
-  --main-bg: rgb(36, 39, 58); /* macchiato base */
-  --mask-bg: rgb(41, 46, 66); /* macchiato mantle */
-  --main-border-color: rgb(54, 58, 79); /* macchiato crust */
+  --main-bg: rgb(36 39 58); /* macchiato base */
+  --mask-bg: rgb(41 46 66); /* macchiato mantle */
+  --main-border-color: rgb(54 58 79); /* macchiato crust */
 
   /* Common color */
-  --text-color: rgb(202, 211, 245); /* macchiato text */
-  --text-muted-color: rgb(166, 173, 200); /* macchiato subtext1 */
-  --text-muted-highlight-color: rgb(186, 194, 222); /* macchiato subtext0 */
-  --heading-color: rgb(202, 211, 245); /* macchiato text */
-  --label-color: rgb(186, 194, 222); /* macchiato subtext0 */
-  --blockquote-border-color: rgb(88, 91, 112); /* macchiato overlay0 */
-  --blockquote-text-color: rgb(166, 173, 200); /* macchiato subtext1 */
-  --link-color: rgb(140, 170, 238); /* macchiato blue */
-  --link-underline-color: rgb(78, 132, 193); /* macchiato sapphire */
-  --button-bg: rgb(36, 39, 58); /* macchiato base */
-  --btn-border-color: rgb(54, 58, 79); /* macchiato crust */
+  --text-color: rgb(202 211 245); /* macchiato text */
+  --text-muted-color: rgb(166 173 200); /* macchiato subtext1 */
+  --text-muted-highlight-color: rgb(186 194 222); /* macchiato subtext0 */
+  --heading-color: rgb(202 211 245); /* macchiato text */
+  --label-color: rgb(186 194 222); /* macchiato subtext0 */
+  --blockquote-border-color: rgb(88 91 112); /* macchiato overlay0 */
+  --blockquote-text-color: rgb(166 173 200); /* macchiato subtext1 */
+  --link-color: rgb(140 170 238); /* macchiato blue */
+  --link-underline-color: rgb(78 132 193); /* macchiato sapphire */
+  --button-bg: rgb(36 39 58); /* macchiato base */
+  --btn-border-color: rgb(54 58 79); /* macchiato crust */
   --btn-backtotop-color: var(--text-color);
-  --btn-backtotop-border-color: rgb(41, 46, 66); /* macchiato mantle */
-  --card-header-bg: rgb(54, 58, 79); /* macchiato crust */
-  --checkbox-color: rgb(166, 173, 200); /* macchiato subtext1 */
+  --btn-backtotop-border-color: rgb(41 46 66); /* macchiato mantle */
+  --card-header-bg: rgb(54 58 79); /* macchiato crust */
+  --checkbox-color: rgb(166 173 200); /* macchiato subtext1 */
   --checkbox-checked-color: var(--link-color);
-  --img-bg: radial-gradient(circle, rgb(30, 32, 48) 0%, rgb(41, 46, 66) 100%);
+  --img-bg: radial-gradient(circle, rgb(30 32 48) 0%, rgb(41 46 66) 100%);
   --shimmer-bg: linear-gradient(
     90deg,
     rgb(255 255 255 / 0%) 0%,
@@ -32,35 +32,35 @@
   );
 
   /* Sidebar */
-  --site-title-color: rgb(186, 194, 222); /* macchiato subtext0 */
-  --site-subtitle-color: rgb(166, 173, 200); /* macchiato subtext1 */
-  --sidebar-bg: rgb(41, 46, 66); /* macchiato mantle */
-  --sidebar-border-color: rgb(54, 58, 79); /* macchiato crust */
-  --sidebar-muted-color: rgb(166, 173, 200); /* macchiato subtext1 */
-  --sidebar-active-color: rgb(202, 211, 245); /* macchiato text */
-  --sidebar-hover-bg: rgb(49, 54, 75); /* macchiato surface1 */
-  --sidebar-btn-bg: rgb(44, 47, 71); /* macchiato surface0 */
-  --sidebar-btn-color: rgb(166, 173, 200); /* macchiato subtext1 */
-  --avatar-border-color: rgb(186, 194, 222, 0.9); /* macchiato subtext0 */
+  --site-title-color: rgb(186  194  222); /* macchiato subtext0 */
+  --site-subtitle-color: rgb(166  173  200); /* macchiato subtext1 */
+  --sidebar-bg: rgb(41  46  66); /* macchiato mantle */
+  --sidebar-border-color: rgb(54  58  79); /* macchiato crust */
+  --sidebar-muted-color: rgb(166  173  200); /* macchiato subtext1 */
+  --sidebar-active-color: rgb(202  211  245); /* macchiato text */
+  --sidebar-hover-bg: rgb(49  54  75); /* macchiato surface1 */
+  --sidebar-btn-bg: rgb(44  47  71); /* macchiato surface0 */
+  --sidebar-btn-color: rgb(166  173  200); /* macchiato subtext1 */
+  --avatar-border-color: rgb(186  194  222  0.9); /* macchiato subtext0 */
 
   /* Topbar */
-  --topbar-bg: rgba(36, 39, 58, 0.64); /* macchiato base with transparency */
+  --topbar-bg: rgba(36  39  58  0.64); /* macchiato base with transparency */
   --topbar-text-color: var(--text-color);
-  --search-border-color: rgb(78, 82, 105); /* macchiato overlay1 */
-  --search-icon-color: rgb(108, 112, 134); /* macchiato overlay2 */
-  --input-focus-border-color: rgb(129, 133, 157); /* macchiato overlay2 */
+  --search-border-color: rgb(78  82  105); /* macchiato overlay1 */
+  --search-icon-color: rgb(108  112  134); /* macchiato overlay2 */
+  --input-focus-border-color: rgb(129  133  157); /* macchiato overlay2 */
 
   /* Home page */
-  --post-list-text-color: rgb(202, 211, 245); /* macchiato text */
+  --post-list-text-color: rgb(202  211  245); /* macchiato text */
   --btn-patinator-text-color: var(--text-color);
-  --btn-paginator-hover-color: rgb(49, 54, 75); /* macchiato surface1 */
+  --btn-paginator-hover-color: rgb(49  54  75); /* macchiato surface1 */
 
   /* Posts */
-  --toc-highlight: rgb(140, 170, 238);
-  --toc-popup-border-color: rgb(78, 82, 105);
-  --tag-hover: rgb(74, 88, 109);
-  --tb-odd-bg: rgb(49, 54, 75);
-  --tb-even-bg: rgb(41, 46, 66);
+  --toc-highlight: rgb(140  170  238);
+  --toc-popup-border-color: rgb(78  82  105);
+  --tag-hover: rgb(74  88  109);
+  --tb-odd-bg: rgb(49  54  75);
+  --tb-even-bg: rgb(41  46  66);
   --tb-border-color: var(--tb-odd-bg);
   --footnote-target-bg: rgb(63 81 181);
   --btn-share-color: #6c757d;
@@ -83,19 +83,19 @@
   --prompt-danger-icon-color: #cd0202;
 
   /* Tags */
-  --tag-border: rgb(62, 81, 90);
-  --tag-shadow: rgb(35, 35, 35);
-  --dash-color: rgb(73, 74, 77);
+  --tag-border: rgb(62 81 90);
+  --tag-shadow: rgb(35 35 35);
+  --dash-color: rgb(73 74 77);
   --search-tag-bg: #2c2a2a;
 
   /* Categories */
-  --categories-border: rgb(74, 77, 79, 0.5);
-  --categories-hover-bg: rgb(81, 83, 85);
+  --categories-border: rgb(74 77 79 0.5);
+  --categories-hover-bg: rgb(81 83 85);
   --categories-icon-hover-color: white;
 
   /* Archive */
-  --timeline-node-bg: rgb(163, 164, 167);
-  --timeline-color: rgb(73, 74, 77);
+  --timeline-node-bg: rgb(163 164 167);
+  --timeline-color: rgb(73 74 77);
   --timeline-year-dot-color: var(--timeline-color);
 
   /* Code highlight colors */
@@ -141,11 +141,11 @@
   #archives li:nth-child(odd) {
     background-image: linear-gradient(
       to left,
-      rgb(48, 50, 70),
-      rgb(58, 62, 80),
-      rgb(58, 62, 80),
-      rgb(58, 62, 80),
-      rgb(48, 50, 70)
+      rgb(48 50 70),
+      rgb(58 62 80),
+      rgb(58 62 80),
+      rgb(58 62 80),
+      rgb(48 50 70)
     );
   }
 
